--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -1,4 +1,3 @@
-<?xml version="1.0" encoding="UTF-8"?>
 <web-app xmlns="https://jakarta.ee/xml/ns/jakartaee"
          xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="https://jakarta.ee/xml/ns/jakartaee https://jakarta.ee/xml/ns/jakartaee/web-app_6_0.xsd"
@@ -7,51 +6,77 @@
         <session-timeout>30</session-timeout>
     </session-config>
 
+    <!-- Registro del Filtro de Autenticación -->
+    <filter>
+        <filter-name>AuthenticationFilter</filter-name>
+        <filter-class>mx.tecnm.toluca.config.AuthenticationFilter</filter-class>
+    </filter>
+    <filter-mapping>
+        <filter-name>AuthenticationFilter</filter-name>
+        <url-pattern>/dashboard</url-pattern>
+        <url-pattern>/products.jsp</url-pattern>
+        <url-pattern>/products/*</url-pattern>
+        <url-pattern>/orders</url-pattern> <!-- Agregar /orders al filtro -->
+        <url-pattern>/orders/update</url-pattern> <!-- Agregar /orders/update al filtro -->
+    </filter-mapping>
+    
+    <!-- Registro del ImageServlet -->
     <servlet>
-        <servlet-name>LoginServlet</servlet-name>
-        <servlet-class>mx.tecnm.toluca.servlet.LoginServlet</servlet-class>
+        <servlet-name>ImageServlet</servlet-name>
+        <servlet-class>mx.tecnm.toluca.controller.ImageServlet</servlet-class>
     </servlet>
     <servlet-mapping>
-        <servlet-name>LoginServlet</servlet-name>
-        <url-pattern>/LoginServlet</url-pattern>
-    </servlet-mapping>
-
-    <servlet>
-        <servlet-name>ProductoServlet</servlet-name>
-        <servlet-class>mx.tecnm.toluca.servlet.ProductoServlet</servlet-class>
-    </servlet>
-    <servlet-mapping>
-        <servlet-name>ProductoServlet</servlet-name>
-        <url-pattern>/ProductoServlet</url-pattern>
+        <servlet-name>ImageServlet</servlet-name>
+        <url-pattern>/image</url-pattern>
     </servlet-mapping>
     
     <servlet>
-        <servlet-name>ImageServlet</servlet-name>
-        <servlet-class>mx.tecnm.toluca.servlet.ImageServlet</servlet-class>
+        <servlet-name>ProductApiController</servlet-name>
+        <servlet-class>mx.tecnm.toluca.controller.ProductApiController</servlet-class>
     </servlet>
     <servlet-mapping>
-        <servlet-name>ImageServlet</servlet-name>
-        <url-pattern>/ImageServlet</url-pattern>
+        <servlet-name>ProductApiController</servlet-name>
+        <url-pattern>/api/products</url-pattern>
     </servlet-mapping>
 
+    <!-- Registro del Servlet AuthController -->
     <servlet>
-        <servlet-name>OrdenCompraServlet</servlet-name>
-        <servlet-class>mx.tecnm.toluca.servlet.OrdenCompraServlet</servlet-class>
+        <servlet-name>AuthController</servlet-name>
+        <servlet-class>mx.tecnm.toluca.controller.AuthController</servlet-class>
     </servlet>
     <servlet-mapping>
-        <servlet-name>OrdenCompraServlet</servlet-name>
-        <url-pattern>/OrdenCompraServlet</url-pattern>
+        <servlet-name>AuthController</servlet-name>
+        <url-pattern>/login</url-pattern>
+        <url-pattern>/logout</url-pattern>
     </servlet-mapping>
 
+    <!-- Registro del Servlet ProductController -->
+    <servlet>
+        <servlet-name>ProductController</servlet-name>
+        <servlet-class>mx.tecnm.toluca.controller.ProductController</servlet-class>
+    </servlet>
+    <servlet-mapping>
+        <servlet-name>ProductController</servlet-name>
+        <url-pattern>/dashboard</url-pattern>
+        <url-pattern>/products</url-pattern>
+        <url-pattern>/products/add</url-pattern>
+        <url-pattern>/products/update</url-pattern>
+        <url-pattern>/products/delete</url-pattern>
+        <url-pattern>/orders</url-pattern> <!-- Agregar /orders -->
+        <url-pattern>/orders/update</url-pattern> <!-- Agregar /orders/update -->
+    </servlet-mapping>
+    
     <filter>
-        <filter-name>SecurityFilter</filter-name>
-        <filter-class>mx.tecnm.toluca.filter.SecurityFilter</filter-class>
+        <filter-name>LoginAccessFilter</filter-name>
+        <filter-class>mx.tecnm.toluca.config.LoginAccessFilter</filter-class>
     </filter>
     <filter-mapping>
-        <filter-name>SecurityFilter</filter-name>
-        <url-pattern>/*</url-pattern>
+        <filter-name>LoginAccessFilter</filter-name>
+        <url-pattern>/index.jsp</url-pattern>
+        <url-pattern>/login</url-pattern>
     </filter-mapping>
 
+    <!-- Definir página de inicio -->
     <welcome-file-list>
         <welcome-file>index.jsp</welcome-file>
     </welcome-file-list>
