--- a/pom.xml
+++ b/pom.xml
@@ -13,7 +13,8 @@
         <maven.compiler.source>11</maven.compiler.source>
         <maven.compiler.target>11</maven.compiler.target>
         <mongodb.driver.version>4.11.0</mongodb.driver.version>
-        <jjwt.version>0.9.1</jjwt.version> <!-- Cambiado a 0.9.1 -->
+        <jjwt.version>0.9.1</jjwt.version>
+        <org.json.version>20231013</org.json.version> <!-- Nueva propiedad -->
     </properties>
 
     <dependencies>
@@ -56,25 +57,44 @@
             <version>3.1.0</version>
             <scope>provided</scope>
         </dependency>
-        
+        <!-- org.json para manejar JSON -->
+        <dependency>
+            <groupId>org.json</groupId>
+            <artifactId>json</artifactId>
+            <version>${org.json.version}</version>
+        </dependency>
         <dependency>
             <groupId>org.slf4j</groupId>
             <artifactId>slf4j-api</artifactId>
             <version>2.0.9</version>
         </dependency>
-        
         <dependency>
             <groupId>org.slf4j</groupId>
             <artifactId>slf4j-simple</artifactId>
             <version>2.0.9</version>
         </dependency>
-        
         <dependency>
             <groupId>com.google.code.gson</groupId>
             <artifactId>gson</artifactId>
             <version>2.10.1</version>
         </dependency>
-        
+        <dependency>
+            <groupId>com.squareup.okhttp3</groupId>
+            <artifactId>okhttp</artifactId>
+            <version>4.10.0</version>
+        </dependency>
+        <dependency>
+            <groupId>javax.servlet</groupId>
+            <artifactId>servlet-api</artifactId>
+            <version>3.0-alpha-1</version>
+            <type>jar</type>
+        </dependency>
+        <dependency>
+            <groupId>com.guicedee.services</groupId>
+            <artifactId>javax.servlet-api</artifactId>
+            <version>1.0.9.14-jre14</version>
+            <type>jar</type>
+        </dependency>
     </dependencies>
 
     <build>
