--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,16 +1,8 @@
-# URLs de los servicios externos
-database.service.url=http://192.168.1.85:8080/DatabaseService
-database.service.endpoint=/api/service
-file.server.url=https://filesystembk.s3.us-east-2.amazonaws.com
-file.server.upload.endpoint=https://ui-file-system.vercel.app/upload
-auth.service.url=http://192.168.1.85:8080/DatabaseService/api/auth/login
+# URL del DB Server
+database.service.url=http://10.250.173.380:8080/DatabaseService
 
-# Credenciales para autenticaci\u00f3n
-auth.username=test@example.com
-auth.password=password123
+# URL del File Server (reemplaza con la URL real)
+file.server.url=http://<file-server-url>
 
-# Token est\u00e1tico para el file server
-file.server.token=eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9...
-
-# Otras configuraciones
-image.format=png
+# Token est\u00e1tico del File Server (reemplaza con el token real)
+file.server.token=<file-server-static-token>
