--- a/pom.xml
+++ b/pom.xml
@@ -14,7 +14,7 @@
         <maven.compiler.target>11</maven.compiler.target>
         <mongodb.driver.version>4.11.0</mongodb.driver.version>
         <jjwt.version>0.9.1</jjwt.version>
-        <org.json.version>20231013</org.json.version> <!-- Nueva propiedad -->
+        <org.json.version>20231013</org.json.version>
     </properties>
 
     <dependencies>
@@ -62,6 +62,12 @@
             <groupId>org.json</groupId>
             <artifactId>json</artifactId>
             <version>${org.json.version}</version>
+        </dependency>
+        <!-- JJWT para manejar tokens JWT -->
+        <dependency>
+            <groupId>io.jsonwebtoken</groupId>
+            <artifactId>jjwt</artifactId>
+            <version>${jjwt.version}</version>
         </dependency>
         <dependency>
             <groupId>org.slf4j</groupId>
