--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -1,11 +1,8 @@
-<web-app xmlns="https://jakarta.ee/xml/ns/jakartaee"
-         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-         xsi:schemaLocation="https://jakarta.ee/xml/ns/jakartaee https://jakarta.ee/xml/ns/jakartaee/web-app_6_0.xsd"
-         version="6.0">
+<?xml version="1.0" encoding="UTF-8"?>
+<web-app version="6.0" xmlns="https://jakarta.ee/xml/ns/jakartaee" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="https://jakarta.ee/xml/ns/jakartaee https://jakarta.ee/xml/ns/jakartaee/web-app_6_0.xsd">
     <session-config>
         <session-timeout>30</session-timeout>
     </session-config>
-
     <!-- Registro del Filtro de Autenticación -->
     <filter>
         <filter-name>AuthenticationFilter</filter-name>
@@ -21,7 +18,6 @@
         <url-pattern>/orders/reject</url-pattern>
         <url-pattern>/orders/audit</url-pattern>
     </filter-mapping>
-
     <!-- Registro del Filtro JwtFilter -->
     <filter>
         <filter-name>JwtFilter</filter-name>
@@ -33,7 +29,6 @@
         <url-pattern>/products/*</url-pattern>
         <url-pattern>/orders/*</url-pattern>
     </filter-mapping>
-
     <!-- Registro del Filtro LoginAccessFilter -->
     <filter>
         <filter-name>LoginAccessFilter</filter-name>
@@ -44,17 +39,7 @@
         <url-pattern>/index.jsp</url-pattern>
         <url-pattern>/login</url-pattern>
     </filter-mapping>
-
     <!-- Registro del ImageServlet -->
-    <servlet>
-        <servlet-name>ImageServlet</servlet-name>
-        <servlet-class>mx.tecnm.toluca.controller.ImageServlet</servlet-class>
-    </servlet>
-    <servlet-mapping>
-        <servlet-name>ImageServlet</servlet-name>
-        <url-pattern>/image</url-pattern>
-    </servlet-mapping>
-
     <!-- Definir página de inicio -->
     <welcome-file-list>
         <welcome-file>index.jsp</welcome-file>
