--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,8 +1,4 @@
-# URL del DB Server
-database.service.url=http://10.250.173.380:8080/DatabaseService
-
-# URL del File Server (reemplaza con la URL real)
-file.server.url=http://<file-server-url>
-
-# Token est\u00e1tico del File Server (reemplaza con el token real)
-file.server.token=<file-server-static-token>
+# Configuraci\u00f3n de la aplicaci\u00f3n
+app.base.url=https://5b22-2806-104e-16-1f1-a261-a504-737d-f220.ngrok-free.app
+app.login.endpoint=/DatabaseService/api/auth/login
+app.token.header=Authorization
