--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -1,47 +1,11 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<web-app version="6.0" xmlns="https://jakarta.ee/xml/ns/jakartaee" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="https://jakarta.ee/xml/ns/jakartaee https://jakarta.ee/xml/ns/jakartaee/web-app_6_0.xsd">
+<web-app xmlns="https://jakarta.ee/xml/ns/jakartaee"
+   xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+   xsi:schemaLocation="https://jakarta.ee/xml/ns/jakartaee https://jakarta.ee/xml/ns/jakartaee/web-app_6_0.xsd"
+   version="6.0">
     <session-config>
-        <session-timeout>30</session-timeout>
+        <session-timeout>
+            30
+        </session-timeout>
     </session-config>
-    <!-- Registro del Filtro de Autenticación -->
-    <filter>
-        <filter-name>AuthenticationFilter</filter-name>
-        <filter-class>mx.tecnm.toluca.config.AuthenticationFilter</filter-class>
-    </filter>
-    <filter-mapping>
-        <filter-name>AuthenticationFilter</filter-name>
-        <url-pattern>/dashboard</url-pattern>
-        <url-pattern>/products/*</url-pattern>
-        <url-pattern>/orders</url-pattern>
-        <url-pattern>/orders/update</url-pattern>
-        <url-pattern>/orders/accept</url-pattern>
-        <url-pattern>/orders/reject</url-pattern>
-        <url-pattern>/orders/audit</url-pattern>
-    </filter-mapping>
-    <!-- Registro del Filtro JwtFilter -->
-    <filter>
-        <filter-name>JwtFilter</filter-name>
-        <filter-class>mx.tecnm.toluca.filter.JwtFilter</filter-class>
-    </filter>
-    <filter-mapping>
-        <filter-name>JwtFilter</filter-name>
-        <url-pattern>/dashboard</url-pattern>
-        <url-pattern>/products/*</url-pattern>
-        <url-pattern>/orders/*</url-pattern>
-    </filter-mapping>
-    <!-- Registro del Filtro LoginAccessFilter -->
-    <filter>
-        <filter-name>LoginAccessFilter</filter-name>
-        <filter-class>mx.tecnm.toluca.config.LoginAccessFilter</filter-class>
-    </filter>
-    <filter-mapping>
-        <filter-name>LoginAccessFilter</filter-name>
-        <url-pattern>/index.jsp</url-pattern>
-        <url-pattern>/login</url-pattern>
-    </filter-mapping>
-    <!-- Registro del ImageServlet -->
-    <!-- Definir página de inicio -->
-    <welcome-file-list>
-        <welcome-file>index.jsp</welcome-file>
-    </welcome-file-list>
 </web-app>
