--- a/pom.xml
+++ b/pom.xml
@@ -32,6 +32,7 @@
             <groupId>org.glassfish.jersey.core</groupId>
             <artifactId>jersey-client</artifactId>
             <version>3.1.3</version>
+            <scope>provided</scope>
         </dependency>
     
         <!-- Validación de datos -->
