--- a/pom.xml
+++ b/pom.xml
@@ -26,6 +26,13 @@
             <artifactId>jersey-media-json-jackson</artifactId>
             <version>3.1.3</version>
         </dependency>
+        
+        <dependency>
+            <groupId>org.glassfish.jersey.media</groupId>
+            <artifactId>jersey-media-multipart</artifactId>
+            <version>4.0.0-M2</version>
+            <type>jar</type>
+        </dependency>
     
         <!-- Cliente HTTP -->
         <dependency>
