--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 # Configuraci\u00f3n de la aplicaci\u00f3n
-app.base.url=https://c656-187-200-194-95.ngrok-free.app
+app.base.url=https://0c37-2806-2f0-a160-fe13-34e0-883c-1a5e-86c6.ngrok-free.app
 app.login.endpoint=/DatabaseService/api/auth/login
 app.service.endpoint=/DatabaseService/api/service
 app.token.header=Authorization
