--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 # Configuraci\u00f3n de la aplicaci\u00f3n
-app.base.url=http://10.128.6.166:8080
+app.base.url=https://9126-2806-104e-16-b7ce-88-e88a-e572-3f6d.ngrok-free.app
 app.login.endpoint=/DatabaseService/api/auth/login
 app.service.endpoint=/DatabaseService/api/service
 app.token.header=Authorization
